[gd_scene load_steps=2 format=3 uid="uid://bltw418drkbv8"]

[ext_resource type="Script" uid="uid://b8ve1kmfskl5c" path="res://test_folder/spawne.gd" id="1_ehdjo"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_ehdjo")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="connect_Button" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "CONNECT"

[node name="host_Button2" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "HOST"

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("uid://35xccla353gw")
spawn_path = NodePath("..")

[connection signal="pressed" from="Control/VBoxContainer/connect_Button" to="." method="_on_connect_button_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/host_Button2" to="." method="_on_host_button_2_pressed"]
